updating exercise section

--- a/originals/lecture1 copy 19.html
+++ b/originals/lecture1 copy 19.html
@@ -49,7 +49,7 @@
                     <nav class="slide">
                         <li><a href="./lecture1.html">Home</a></li>
                         <li><a href="../tvm1/help/help-index.html">Math Help</a></li>
-                        <li><a href="./tvm1-exercises.html">Exercises</a></li>
+                        <li><a href="./exercises/exerciseIntro-1.html">Exercises</a></li>
                         <li><a href="">Financial Calculator</a></li>
                     </nav>
                 </div>
