--- a/originals/tvm1-exercises copy 4.html
+++ b/originals/tvm1-exercises copy 4.html
@@ -27,9 +27,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -68,9 +68,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -130,9 +130,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -177,9 +177,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -229,9 +229,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -289,9 +289,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -346,9 +346,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -388,9 +388,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -438,9 +438,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -495,9 +495,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -551,9 +551,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -598,9 +598,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -649,9 +649,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -700,9 +700,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -757,9 +757,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -803,9 +803,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -855,9 +855,9 @@
                     </div>
                 </div>
                 <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                    <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
                 </nav>
                 <div class="row">
@@ -1079,9 +1079,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1137,9 +1137,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1182,9 +1182,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1234,9 +1234,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1283,9 +1283,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1339,9 +1339,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1385,9 +1385,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1438,9 +1438,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
@@ -1488,9 +1488,9 @@
             </div>
         </div>
         <nav class="row">
-            <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
             <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-            <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
             <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
         </nav>
         <div class="row">
