--- a/tvm1/navbar.html
+++ b/tvm1/navbar.html
@@ -2,7 +2,7 @@
     <nav class="slide">
         <li><a href="./lecture1.html">Home</a></li>
         <li><a href="./help/help-index.html">Math Help</a></li>
-        <li><a href="./tvm1-exercises.html">Exercises</a></li>
+        <li><a href="./exercises/exerciseIntro-1.html">Exercises</a></li>
         <li><a href="">Financial Calculator</a></li>
     </nav>
 </div> -->
@@ -10,6 +10,6 @@
 <nav class="row">
     <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
     <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
 </nav>
