--- a/tvm1/tvm1-2.html
+++ b/tvm1/tvm1-2.html
@@ -25,7 +25,7 @@
             <nav class="row">
                 <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -35,12 +35,12 @@
                     <hr> -->
                         <div id="learningObj" class="bottom-space">
                             <h3>Learning Objectives</h3>
-                                <ul>
-                                    <li>Identify the TVM variables within a given word problem</li>
-                                    <li>Understand the relationship between variables in the TVM equation</li>
-                                    <li>Memorize and recall the general form of the TVM equation</li>
-                                    <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
-                                </ul>
+                            <ul>
+                                <li>Identify the TVM variables within a given word problem</li>
+                                <li>Understand the relationship between variables in the TVM equation</li>
+                                <li>Memorize and recall the general form of the TVM equation</li>
+                                <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
+                            </ul>
                         </div>
                         <div id="requirements" class="bottom-space">
                             <h3>Requirements</h3>
