--- a/tvm1/tvm1-7.html
+++ b/tvm1/tvm1-7.html
@@ -26,7 +26,7 @@
             <nav class="row">
                 <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -40,7 +40,7 @@
 
                         <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
                         <div><img class="math" src="../images/derive2-variables.svg" alt="FV=PV(1+i)^n"></div>
-                        
+
 
                     </div>
                 </div>
