--- a/tvm1/exercises/exercise12-22.html
+++ b/tvm1/exercises/exercise12-22.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,16 +15,16 @@
 <body>
     <div class="container-fluid">
 
-
-        <div id="" class="slide">
+        <!-- problem 14  -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,44 +32,42 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 1: Solution</h4>
-                        <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
-                        <p>Let's work through the problem.</p>
-                        <ul>
-                            <li>First, identify the variables:</li>
-                            <div><img class="math" src="../images/variables.svg">
-                            </div>
-                            <li>Once you've identified the variables, plug the numbers into the equation: </li>
-                            <div><img class="math" src="../images/plug-in-numbers.svg">
-                            </div>
-                            <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
-                            <div><img class="math" src="../images/add-numbers.svg">
-                            </div>
 
-                            <li>Next, apply the exponent. Be careful about rounding.</li>
-                            <div><img class="math" src="../images/apply-exponent.svg"></div>
-
-
-                            <li>Finally, do the multiplication.</li>
-                            <div><img class="math" src="../images/fv-answer.svg"></div>
-                            </li>
-                        </ul>
+                        <h4>Exercise 14: Identify the Variables</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
+                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and returns 4% annual interest?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex14" type="number"><br>
+                                    <label> </label>
+                                    <input id="Future Value (FV)alue-ex14" type="number"><br>
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex14" type="number"><br>
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex14" type="number"><br>
+                                </form>
+                                <button onclick="exercise_14()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex14"></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="btn"><a href="tvm1-10.html">Back</a></button>
-                    <button type="button" class="btn"><a href="tvm1-12.html">Continue</a></button>
+                    <button type="button" class="back btn">Back</button>
+                    <button type="button" class="continue btn pgUp">Continue</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">12</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
