--- a/tvm1/exercises/exercise2a-3.html
+++ b/tvm1/exercises/exercise2a-3.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,32 +15,49 @@
 <body>
     <div class="container-fluid">
 
-
-        <!---------------- Title/Cover slide  *************** -->
-        <div id="" class="slide background-image">
+        <!--  problem 2 answer  -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h1 class="primary-title">Time Value of Money</h1>
-                    <h2 class="secondary-title">Part 1: The Basics</h2>
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
-                <div class="col-sm-1 offset-sm-1">
-                    <div class="page-number hide">1</div>
+                <div class="col-12">
+                    <div class="content">
+                        <!-- Help -->
+                        <h4>Exercise 2: Solution</h4>
+                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
+                        <p>Variables:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            Present Value (PV) = 2000 <br>
+                            Future Value (FV) = ? <br>
+                            i = 8% &xrarr; 0.08<br>
+                            n = 15
+                        </p>
+                    </div>
                 </div>
-                <div class="offset-5 col-4 offset-md-6">
-                    <button type="button" class="hide btn"></button>
-                    <button type="button" class="btn start"><a href="tvm1-2.html">Start!</a></button>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="back btn">Back</button>
+                    <button type="button" class="continue btn pgUp">Continue</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
