--- a/tvm1/tvm1-18.html
+++ b/tvm1/tvm1-18.html
@@ -26,7 +26,7 @@
             <nav class="row">
                 <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="btn"><a href="tvm1-17.html">Back</a></button>
-                    <button type="button" class="btn"><a href="tvm1-exercises.html">To Exercises</a></button>
+                    <button type="button" class="btn"><a href="./exercises/exerciseIntro-1.html">To Exercises</a></button>
                 </div>
             </div>
             <div class="row">
