--- a/tvm1/tvm1-1.html
+++ b/tvm1/tvm1-1.html
@@ -35,12 +35,11 @@
                     <div class="page-number hide">1</div>
                 </div>
                 <div class="offset-5 col-4 offset-md-6">
-                    <button type="button" class="hide btn"></button>
-                    <button type="button" class="btn start"><a href="tvm1-2.html">Start!</a></button>
+                    <a type="button" class="hide btn"></a>
+                    <a type="button" class="btn start" href="tvm1-2.html">Start!</a>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
