--- a/tvm1/tvm1-7.html
+++ b/tvm1/tvm1-7.html
@@ -35,11 +35,15 @@
                         <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principals you need to follow along with the derivation of the equation.</p>
                         <p>If we combine our previous equations into one equation it looks like this:</p>
                         <div><img class="math" src="../images/derive1.svg" alt="100(1+.10)(1+.10)=121"></div>
-                        <p>We can simplify the equation to this: </p>
-                        <div><img class="math" src="../images/derive2.svg" alt="100(1+.10)^2=121"></div>
+                        <p>We can simplify the equation to this:
+                            <div>$100(1+.10)^2=121$</div>
+                        </p>
 
                         <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
-                        <div><img class="math" src="../images/derive2-variables.svg" alt="FV=PV(1+i)^n"></div>
+                        <div>
+                            <h3>$FV=PV(1+i)^n$</h3>
+                        </div>
+
 
 
                     </div>
@@ -48,8 +52,8 @@
             <!-- to math refresher -->
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="btn"><a href="tvm1-6.html">Back</a></button>
-                    <button type="button" class="btn"><a href="tvm1-8.html">Continue</a></button>
+                    <a type="button" class="btn" href="tvm1-6.html">Back</a>
+                    <a type="button" class="btn" href="tvm1-8.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -58,8 +62,6 @@
                 </div>
             </div>
         </div>
-
-
 
 
     </div> <!--  end of container -->
