--- a/test.html
+++ b/test.html
@@ -15,33 +15,25 @@
 <body>
     <div class="container-fluid">
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h2 class="primary-title">TEST</h2>
+                    <h3 class="secondary-title">TEST</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p class="answer">The answer is $100.</p>
-                        <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+                        <h1>Test</h1>
+
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-12.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-14.html">Continue</a>
+                    <a type="button" class="btn" href="tvm1-6.html">Back</a>
+                    <a type="button" class="btn" href="tvm1-8.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -50,7 +42,6 @@
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
