--- a/tvm1/exercises/exercise10a-19.html
+++ b/tvm1/exercises/exercise10a-19.html
@@ -47,7 +47,7 @@
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
+                    <a type="button" class="btn">Back</a>
                     <button type="button" class="continue btn pgUp">Continue</button>
                 </div>
             </div>
