--- a/tvm1/exercises/exercise2a-3.html
+++ b/tvm1/exercises/exercise2a-3.html
@@ -48,8 +48,8 @@
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="back btn">Back</button>
-                    <button type="button" class="continue btn pgUp">Continue</button>
+                    <a type="button" class="btn">Back</a>
+                    <a type="button" class=" btn ">Continue</a>
                 </div>
             </div>
             <div class="row">
