--- a/tvm1/tvm1-14.html
+++ b/tvm1/tvm1-14.html
@@ -45,13 +45,13 @@
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="btn"><a href="tvm1-13.html">Back</a></button>
-                    <button type="button" class="btn"><a href="tvm1-15.html">Continue</a></button>
+                    <a type="button" class="btn" href="tvm1-13.html">Back</a>
+                    <a type="button" class="btn" href="tvm1-15.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">17</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
