updating for loading on the server, file structure, naming conventions

--- a/basic-concepts/tvm1-4.html
+++ b/basic-concepts/tvm1-4.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Introduction - Variables</h3>
+                    <h3 class="secondary-title">Introduction - TVM Variables</h3>
                 </div>
             </div>
             <nav class="row">
