--- a/basic-concepts/exercises/exercise2-2.html
+++ b/basic-concepts/exercises/exercise2-2.html
@@ -7,24 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
 
 <body>
     <div class="container-fluid">
+        <!-- problem 2 -->
 
-
-        <div id="" class="slide">
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -32,27 +32,46 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. <b>If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</b></p>
-                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
-                        <p class="answer">The answer is $110.</p>
-                        <p><a href="help/help1-1.html" target="_blank">See the steps for solving this problem here.</a></p>
+                        <h4>Exercise 2: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
+                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
 
+                                    <label>Present Value (PV)</label>
+                                    <input id="Present Value (PV)alue-ex2" type="number"><br>
+
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex2" type="number"><br>
+
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex2" type="number"><br>
+
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex2" type="number"><br>
+
+                                </form>
+                                <button onclick="exercise_2()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex2"></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-4.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-6.html">Continue</a>
+                    <a href="exerciseIntro-1.html" type="button" class="btn">Back</a>
+                    <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">15</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
