--- a/basic-concepts/exercises/exerciseIntro-1.html
+++ b/basic-concepts/exercises/exerciseIntro-1.html
@@ -14,8 +14,6 @@
 
 <body>
     <div class="container-fluid">
-        <!-- problem 2 -->
-
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -32,38 +30,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 2: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
-                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-
-                                    <label>Present Value (PV)</label>
-                                    <input id="Present Value (PV)alue-ex2" type="number"><br>
-
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex2" type="number"><br>
-
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex2" type="number"><br>
-
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex2" type="number"><br>
-
-                                </form>
-                                <button onclick="exercise_2()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex2"></div>
-                        </div>
+                        <h3>Exercises</h3>
+                        <p>It’s important that you grasp the basics of TVM before continuing on to more advanced topics. To help you gauge your understanding of the TVM basics, its time to try some exercises on your own.</p>
+                        <h5>Instructions:</h5>
+                        <!-- <p><b>There are 14 exercises in this section.</b></p> -->
+                        <p class="alert">Your answers should include dollars and cents. Do not enter commas (,) or symbols (% or $). For example, a properly formatted answer looks like this: <span class="answer">1150.38</span></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a href="" type="button" class="hide btn">Back</a>
+                    <a href="exercise2-2.html" type="button" class="btn">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -72,7 +50,6 @@
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
