--- a/basic-concepts/tvm1-5.html
+++ b/basic-concepts/tvm1-5.html
@@ -7,22 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <div id="" class="slide exercise-slide">
+
+
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Exercises</h3>
+                    <h3 class="secondary-title">Learning the TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -30,18 +32,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Exercises</h3>
-                        <p>It’s important that you grasp the basics of TVM before continuing on to more advanced topics. To help you gauge your understanding of the TVM basics, its time to try some exercises on your own.</p>
-                        <h5>Instructions:</h5>
-                        <!-- <p><b>There are 14 exercises in this section.</b></p> -->
-                        <p class="alert">Note: Your answers should include dollars and cents. Do not enter commas (,) or symbols (% or $). For example, a properly formatted answer looks like this: <span class="answer">1150.38</span></p>
+                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. <b>If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</b></p>
+                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
+                        <p class="answer">The answer is $110.</p>
+                        <p><a href="help/help1-1.html" target="_blank">See the steps for solving this problem here.</a></p>
+
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="tvm1-4.html">Back</a>
+                    <a type="button" class="btn" href="tvm1-6.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -50,6 +52,8 @@
                 </div>
             </div>
         </div>
+
+
 
     </div> <!--  end of container -->
 
